# raytracer

./: .gitignore  .gitmodules  BUILD.txt  blender_custom_panel.py  render_sequence.py  scenegen.py
raytracer/: CMakeLists.txt  CMakeSettings.json  Raytracer.cpp
raytracer/camera/: ICamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
raytracer/film/: Tile.h
raytracer/io/: PPMFile.cpp  PPMFile.h
raytracer/math/: Constants.h  Matrix.h  OrthonormalBasis.cpp  OrthonormalBasis.h  Ray.cpp  Ray.h  Transformation.cpp  Transformation.h  Vector3.cpp  Vector3.h
raytracer/src/: CMakeLists.txt
raytracer/src/exe/: CMakeLists.txt  Raytracer.cpp
raytracer/src/exe/preview/: PreviewToggle.h  PreviewWindow.cpp  PreviewWindow.h
raytracer/src/exe/preview/glad/include/glad/: glad.h
raytracer/src/exe/preview/glad/src/: glad.c
raytracer/src/lib/: CMakeLists.txt
raytracer/src/lib/camera/: ICamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
raytracer/src/lib/film/: FrameBuffer.cpp  FrameBuffer.h  RGB.cpp  RGB.h  Tile.cpp  Tile.h
raytracer/src/lib/io/: EXRWriter.cpp  EXRWriter.h  GLTF.cpp  GLTF.h  HDR.cpp  HDR.h  JPEG.cpp  JPEG.h  OBJLoader.cpp  OBJLoader.h  PNG.cpp  PNG.h  PNGWriter.cpp  PNGWriter.h  PPMFile.cpp  PPMFile.h  PathResolver.cpp  PathResolver.h  TileFile.cpp  TileFile.h
raytracer/src/lib/io/gltf/: gltf.cpp  gltf.h
raytracer/src/lib/io/lib/: tiny_gltf.h  tinyexr.h
raytracer/src/lib/lamp/: PointLamp.cpp  PointLamp.h
raytracer/src/lib/light/: AreaLight.cpp  AreaLight.h  DirectionalLight.cpp  DirectionalLight.h  PointLight.cpp  PointLight.h
raytracer/src/lib/material/: AddMaterial.cpp  AddMaterial.h  CompositeMaterial.cpp  CompositeMaterial.h  DiffuseMaterial.cpp  DiffuseMaterial.h  EmissiveMaterial.cpp  EmissiveMaterial.h  FlatMaterial.cpp  FlatMaterial.h  FresnelMixMaterial.cpp  FresnelMixMaterial.h  GlassMaterial.cpp  GlassMaterial.h  GlossyMaterial.cpp  GlossyMaterial.h  IMaterial.cpp  IMaterial.h  MixMaterial.cpp  MixMaterial.h  NextEventEstimation.cpp  NextEventEstimation.h  NormalMapSampler.h  NormalMaterial.cpp  NormalMaterial.h  PhotonIndicatorMaterial.cpp  PhotonIndicatorMaterial.h  PluckerTreeDiagMaterial.cpp  PluckerTreeDiagMaterial.h  PositionMaterial.cpp  PositionMaterial.h  TexCoordMaterial.cpp  TexCoordMaterial.h  Texture.cpp  Texture.h  TransparentMaterial.cpp  TransparentMaterial.h  VNDFGGXSampler.cpp  VNDFGGXSampler.h
raytracer/src/lib/material/environment/: ColorEnvironment.cpp  ColorEnvironment.h  IEnvironmentMaterial.h  ImageMapEnvironment.cpp  ImageMapEnvironment.h  SkyEnvironment.cpp  SkyEnvironment.h
raytracer/src/lib/math/: Axis.h  CircularUniformSampler.h  Constants.h  FastRandom.h  OrthonormalBasis.cpp  OrthonormalBasis.h  Ray.cpp  Ray.h  RayHitInfo.cpp  RayHitInfo.h  Sampler.h  Transformation.cpp  Transformation.h  Triangle.h  UniformSampler.h  Vector2.h  Vector3.cpp  Vector3.h
raytracer/src/lib/model/: Model.cpp  Model.h
raytracer/src/lib/photonmapping/: KDTree.h  KDTreeBuilder.h  KDTreeSearch.h  Photon.h  PhotonMap.h  PhotonMapBuilder.cpp  PhotonMapBuilder.h  PhotonTracer.cpp  PhotonTracer.h
raytracer/src/lib/renderer/: PPMRenderer.cpp  PPMRenderer.h  ProgressMonitor.cpp  ProgressMonitor.h  Renderer.cpp  Renderer.h
raytracer/src/lib/scene/: Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h
raytracer/src/lib/scene/dynamic/: DynamicScene.cpp  DynamicScene.h  DynamicSceneNode.cpp  DynamicSceneNode.h
raytracer/src/lib/scene/renderable/: Scene.cpp  Scene.h  SceneNode.h  SceneRayHitInfo.cpp  SceneRayHitInfo.h
raytracer/src/lib/shape/: AABB.cpp  AABB.h  Box.cpp  Box.h  IShape.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  TriangleMesh.cpp  TriangleMesh.h
raytracer/src/lib/shape/bvh/: BVH.h  BVHBuilder.h  BVHNode.h
raytracer/src/lib/shape/list/: IShapeList.cpp  IShapeList.h  InstancedModelList.cpp  InstancedModelList.h
raytracer/src/lib/utility/: Batcher.h  DynAllocStack.h  DynAllocTree.h  ICloneable.h  MemoryUsage.h  ProgressMonitor.cpp  ProgressMonitor.h  StatCollector.cpp  StatCollector.h  Task.cpp  Task.h  array_offset_pointer.cpp  array_offset_pointer.h  raw_pointer.h  soa_sort.h  task_engine.h  unique_ptr_template.h
raytracer/src/web/: CMakeLists.txt  Raytracer.cpp  Settings.cpp  Settings.h  api.h  shell.html
raytracer/src/web/preview/: PreviewCanvas.cpp  PreviewCanvas.h
raytracer/test/: AABB.cpp  BVH.cpp  Box.cpp  CMakeLists.txt  KDTree.cpp  KDTreeBuilder.cpp  KDTreeSearch.cpp  Main.cpp  Quaternion.cpp  Triangle.cpp
